--- a/app/src/main/res/layout/activity_teacher_student_gaurdian_contact.xml
+++ b/app/src/main/res/layout/activity_teacher_student_gaurdian_contact.xml
@@ -34,6 +34,7 @@
             android:layout_weight="0.3"
             android:layout_height="0dp">
             <TextView
+                android:background="@android:color/white"
                 android:id="@+id/studentname"
                 android:text="NAME"
                 android:textStyle="bold"
@@ -43,6 +44,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"/>
             <TextView
+                android:background="@android:color/white"
                 android:id="@+id/studentusn"
                 android:text="USN"
                 android:textStyle="bold"
@@ -59,11 +61,13 @@
     <LinearLayout
 
         android:layout_weight="0.60"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp">
 
         <LinearLayout
+            android:background="@android:color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_weight="0.5"
@@ -71,12 +75,14 @@
             android:layout_height="0dp">
 
             <LinearLayout
+                android:background="@android:color/white"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
                 <TextView
+                    android:background="@android:color/white"
                     android:id="@+id/studentphno"
                     android:layout_width="0dp"
                     android:text="Ph no:"
@@ -86,6 +92,7 @@
 
 
                 <ImageView
+                    android:background="@android:color/white"
                     android:layout_width="0dp"
                     android:layout_weight="0.5"
                     android:src="@mipmap/whatsapp"
@@ -93,6 +100,7 @@
                     android:scaleType="fitCenter"
                     android:layout_height="match_parent"/>
                 <ImageView
+                    android:background="@android:color/white"
                     android:layout_width="0dp"
                     android:src="@drawable/ic_phone_black_24dp"
                     android:layout_gravity="center"
@@ -110,10 +118,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:background="@android:color/white"
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
                 <TextView
+                    android:background="@android:color/white"
                     android:id="@+id/studentmailid"
                     android:layout_width="0dp"
                     android:textColor="#000000"
@@ -122,6 +132,7 @@
                     android:layout_weight="1"/>
 
                 <ImageView
+                    android:background="@android:color/white"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:src="@mipmap/email"
@@ -131,6 +142,7 @@
 
             </LinearLayout>
             <Button
+
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:textColor="#000000"
@@ -143,6 +155,7 @@
 
 
         <LinearLayout
+            android:background="@android:color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:divider="@drawable/social_media_divider"
@@ -154,6 +167,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:textSize="15dp"
+                android:background="@android:color/white"
                 android:textStyle="bold"
                 android:text="PARENT/GAURDIAN DETAILS"
                 android:textColor="#000000"
@@ -162,6 +176,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
+                android:background="@android:color/white"
                 android:src="@drawable/social_media_divider"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -174,6 +189,7 @@
                     android:id="@+id/gaurdianphno"
                     android:layout_width="0dp"
                     android:text="Ph no:"
+                    android:background="@android:color/white"
                     android:textColor="#000000"
                     android:layout_height="match_parent"
                     android:layout_weight="1"/>
@@ -181,12 +197,14 @@
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_weight="0.5"
+                    android:background="@android:color/white"
                     android:src="@mipmap/whatsapp"
                     android:layout_gravity="center"
                     android:scaleType="fitCenter"
                     android:layout_height="match_parent"/>
                 <ImageView
                     android:layout_width="0dp"
+                    android:background="@android:color/white"
                     android:src="@drawable/ic_phone_black_24dp"
                     android:layout_gravity="center"
                     android:scaleType="fitCenter"
@@ -195,6 +213,7 @@
 
             </LinearLayout>
             <ImageView
+                android:background="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:src="@drawable/social_media_divider"/>
@@ -202,6 +221,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
+                android:background="@android:color/white"
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
@@ -215,6 +235,7 @@
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:background="@android:color/white"
                     android:src="@mipmap/email"
                     android:layout_gravity="center"
                     android:scaleType="fitCenter"
