--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,15 @@
     android:background="@drawable/loginbackground"
     tools:context=".MainActivity">
 
-    
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:src="@drawable/ic_person_black_24dp"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/transparent"/>
-    
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="52dp"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_person_black_24dp" />
 
 
     <com.tomer.fadingtextview.FadingTextView
@@ -22,14 +23,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="120dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="163dp"
         android:background="@android:color/transparent"
         android:fontFamily="sans-serif"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         app:texts="@array/loginpage"
-        app:timeout="500"/>
+        app:timeout="500" />
 
     <EditText
         android:id="@+id/emailid"
@@ -77,6 +77,39 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:text="Facing Issues in signing in?" />
+
+    <ProgressBar
+        android:id="@+id/signin_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="89dp" />
+
+    <ImageView
+        android:id="@+id/online"
+        android:layout_width="14dp"
+        android:layout_height="21dp"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/status"
+        app:srcCompat="@drawable/online" />
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Connected" />
+
+    <ImageView
+        android:id="@+id/offline"
+        android:layout_width="16dp"
+        android:layout_height="23dp"
+        android:layout_alignEnd="@+id/online"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/offline" />
     />
 
 </RelativeLayout>
