--- a/app/src/main/res/layout/activity_student_front_end.xml
+++ b/app/src/main/res/layout/activity_student_front_end.xml
@@ -10,18 +10,46 @@
     tools:context=".StudentFrontEnd">
 
     <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:backgroundTint="@android:color/darker_gray">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="@android:color/darker_gray"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="1"
-            android:orientation="vertical"
-            android:background="@drawable/craftbackgroundcolor">
+            android:background="@drawable/craftbackgroundcolor"
+            android:orientation="vertical">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/details"
+                    android:layout_width="315dp"
+                    android:layout_height="71dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="69dp"
+                    android:layout_marginTop="3dp"
+                    android:text="Hello" />
+
+                <ProgressBar
+                    android:id="@+id/fetching"
+                    android:layout_width="68dp"
+                    android:layout_height="74dp" />
+
+                <ImageView
+                    android:id="@+id/profilepic"
+                    android:layout_width="68dp"
+                    android:layout_height="63dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    app:srcCompat="@drawable/ic_person_black_24dp" />
+
+            </RelativeLayout>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/attendancecontainer"
@@ -126,6 +154,6 @@
 
 
         </LinearLayout>
-</ScrollView>
+    </ScrollView>
 
 </LinearLayout>
